# PiBlaster2

./: .gitignore  README.md
Android/PiBlaster2/: piblaster2.pro  piblaster2.qmlproject  resources.qrc
Android/PiBlaster2/android/: AndroidManifest.xml
Android/PiBlaster2/qml/: BT.js  Global.qml  MainMenuBar.qml  UI.js  main.qml
Android/PiBlaster2/qml/bluetooth/: BluetoothComm.qml  BluetoothCommand.qml  BluetoothConnect.qml
Android/PiBlaster2/qml/browse/: BrowseDelegate.qml  BrowseModel.qml  BrowsePage.qml
Android/PiBlaster2/qml/component/: SlideStyle.qml  TabStyle.qml
Android/PiBlaster2/qml/connect/: ConnectPage.qml  ConnectTab.qml  SettingsTab.qml
Android/PiBlaster2/qml/content/: AndroidDelegate.qml  ButtonPage.qml  MainDelegate.qml  SliderPage.qml  TabBarPage.qml  TextInputPage.qml
Android/PiBlaster2/qml/dialogs/: NoBluetoothDialog.qml
Android/PiBlaster2/qml/items/: FlickText.qml  ScrollBar.qml  VolumeSlider.qml
Android/PiBlaster2/qml/play/: EqualizerTab.qml  PlayPage.qml  PlayTab.qml  VolumeTab.qml
Android/PiBlaster2/qml/playlist/: PlayListDelegate.qml  PlayListModel.qml  PlayListPage.qml
Android/PiBlaster2/qml/search/: SearchDelegate.qml  SearchModel.qml  SearchPage.qml  SearchView.qml
Android/PiBlaster2/qml/upload/: UploadDelegate.qml  UploadModel.qml  UploadPage.qml
Android/PiBlaster2/src/: BTCommMessageHandler.cpp  BTCommMessageHandler.h  BTMessage.h  BTService.cpp  BTService.h  main.cpp  src.pri
Doc/: PiBlasterCase_concept1.ogv  PiBlasterCase_concept1.pvsm
Pi/PyBlaster2/: CMakeLists.txt
Pi/PyBlaster2/cmake/debian/: postinst  prerm
Pi/PyBlaster2/files/: CMakeLists.txt
Pi/PyBlaster2/files/etc/default/: pyblaster2
Pi/PyBlaster2/files/etc/init.d/: pyblaster2
Pi/PyBlaster2/files/etc/profile.d/: zz_pyblaster2_tmux.sh
Pi/PyBlaster2/files/etc/pyblaster2/: pyblaster.conf
Pi/PyBlaster2/files/opt/PyBlaster2/etc/: pyblaster-lirc.conf
Pi/PyBlaster2/python/: CMakeLists.txt  alsamixer.py  bluetoothcomm.py  cmd.py  codes.py  gpio.py  i2c.py  lircremote.py  log.py  mpc.py  pyblaster2-util.py  pyblaster2.py  settings.py  sql.py  usbdrive.py
