

project(PyBlaster2)
cmake_minimum_required(VERSION 2.8)

add_subdirectory(files)
add_subdirectory(python)

set(PYBLASTER_VERSION_MAJOR 0)
set(PYBLASTER_VERSION_MINOR 1)
set(PYBLASTER_VERSION_BUILD 5)
set(PYBLASTER_VERSION_FULL "${PYBLASTER_VERSION_MAJOR}.${PYBLASTER_VERSION_MINOR}.${PYBLASTER_VERSION_BUILD}")


set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)

set(CPACK_PACKAGE_NAME "pyblaster2")
set(CPACK_PACKAGE_VENDOR "PiBlaster consortium")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Python daemon version 2 for the PiBlaster project")
set(CPACK_PACKAGE_VERSION ${PYBLASTER_VERSION_FULL})
set(CPACK_PACKAGE_VERSION_MAJOR ${PYBLASTER_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PYBLASTER_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PYBLASTER_VERSION_BUILD})
set(CPACK_SYSTEM_NAME "armhf")


set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Ulrich Jansen <ulrich.jansen@rwth-aachen.de>")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE armhf)
set(CPACK_DEBIAN_PACKAGE_VERSION ${PYBLASTER_VERSION_FULL})
set(CPACK_DEBIAN_PACKAGE_SECTION "devel")
set(CPACK_DEBIAN_PACKAGE_PRIORITY "extra")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/cmake/debian/postinst;${CMAKE_CURRENT_SOURCE_DIR}/cmake/debian/prerm;" )
#set(CPACK_DEBIAN_PACKAGE_DEPENDS "udev, usbmount, python-sqlite, python-rpi.gpio, sqlite3, bluez, python3-lirc, python-smbus, tmux, mpd")


set(CPACK_DEBIAN_PACKAGE_DEPENDS "usbmount, mpd, mpc")


include(CPack)
